--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -17,7 +17,7 @@ html
                             | 
                             a(href='#{adminDir}/user/logout') 注销
                         else
-                            a(href='#{adminDir}') 后台管理
+                            //a(href='#{adminDir}') 后台管理
                     a.cms-nav-item(class=!Path ? 'active' : '',href='/') 首页
                     //a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
                     //a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
