--- a/views/app/index.jade
+++ b/views/app/index.jade
@@ -5,7 +5,7 @@ block content
         .row
             if (key) 
                 .col-md-12
-                    .well
+                    .search-area
                         | 搜索 
                         strong "#{key}" 
                         | 共有 
@@ -18,8 +18,6 @@ block content
                             .entry-thumbnail
                                 if (content.gallery && content.gallery.length > 0)
                                     img.img-responsive(src='#{content.gallery[0].url}')
-                            
-                            
                         .post-content
                             h2.entry-title
                                 a(href='/content/#{content._id}') #{content.title}
@@ -31,13 +29,13 @@ block content
                                             | #{content.author.name}
                                     li.publish-date
                                         i.fa.fa-calendar
-                                        time 发表时间：#{moment(content.created).format('YYYY-MM-DD')}
+                                        time 发表于：#{moment(content.created).format('YYYY-MM-DD HH:mm:ss')}
                                     //li.tag
                                     li
                                         i.fa.fa-comment-o
                                         span 评论:#{content.comments && content.comments.length}
                                     li
-                                        span 访问:#{content.visits}
+                                        span 访客:#{content.visits}
                             .entry-summary
                                 - var text = strip(content.content).substr(0, 100);
                                 p #{text}
