--- a/public/assets/app/css/style.css
+++ b/public/assets/app/css/style.css
@@ -16,6 +16,31 @@ a:hover,
 a:active{
     color: #428bca;
 }
+
+#header{
+    padding-top: 65px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
+    background-repeat: no-repeat;
+    background-position: center top;
+
+
+}
+#header .navbar-brand{
+    font-size: 36px;
+    line-height: 30px;
+    color: #fff;
+}
+.header-section{
+    background-color: #9d5468;
+    min-height: 70px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+#header .navbar-collapse ul li a{
+    padding: 25px 20px;
+    color: #fff;
+}
 .gallery{
     padding: 10px;
 }
