--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -7,6 +7,21 @@ html
         block head-css
         block head-js
     body
+        //header#header
+            .navbar.navbar-static-top(role='banner')
+                .container
+                    .header-section
+                        .navbar-header
+                            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                                span.icon-bar
+                                span.icon-bar
+                                span.icon-bar
+                            a.navbar-brand(href='/') wenglou
+                        .navbar-collapse.collapse
+                            ul.nav.navbar-nav.navbar-right
+                                li
+                                    a(href='/admin') 管理后台
+                            
         .cms-masthead
             .container
                 .cms-nav
