--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title #{title}
+        meta(name="viewport",content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0")
         link(rel='stylesheet', href='/assets/plugins/bootstrap/css/bootstrap.min.css')
         link(rel='stylesheet', href='/assets/app/css/style.css')
         block head-css
