--- a/views/server/page/list.jade
+++ b/views/server/page/list.jade
@@ -63,7 +63,7 @@ block foot-js
                 message: $('<div/>').append($('#J_tmpl_add').html()),
                 buttons: [
                     {
-                        label: '发送',
+                        label: '提交',
                         cssClass: 'btn-primary',
                         action: function(dialog) {
                             console.log(dialog)
