--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -35,6 +35,7 @@ html
                         else
                             //a(href='#{adminDir}') 后台管理
                     a.cms-nav-item(class=!Path ? 'active' : '',href='/') 首页
+                    //a.cms-nav-item(class='',href='/?key=css') CSS
                     //a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
                     //a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
         block content
