--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -166,7 +166,7 @@ block foot-js
                         messenger.update({
                             message: '更新失败',
                             hideAfter: 3,
-                            type: 'success'
+                            type: 'error'
                         });
                     }
                 },
@@ -175,7 +175,7 @@ block foot-js
                     messenger.update({
                         message: '系统繁忙',
                         hideAfter: 3,
-                        type: 'success'
+                        type: 'error'
                     });
                 }
             })
