--- a/public/assets/app/css/style.css
+++ b/public/assets/app/css/style.css
@@ -93,7 +93,6 @@ a.btn-danger{
 }
 .cms-masthead{
     background-color: #428bca;
-    box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
 .cms-nav{
 
@@ -103,7 +102,7 @@ a.btn-danger{
 }
 .admin-link{
     color: #fff;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 .admin-link a{
 
@@ -111,7 +110,7 @@ a.btn-danger{
 .cms-nav-item{
     position: relative;
     display: inline-block;
-    padding: 10px;
+    padding: 20px 30px;
     font-weight: 500;
     color: #cdddeb;
 }
